# flask_general_store

./: .replit  README.md  main.py  pyproject.toml  replit.nix
general_store/: __init__.py  forms.py  modules.py  routes.py
general_store/templates/: index.html  layout.html  login_page.html  market.html  register.html
